Comments and logging improvements

--- a/BLAZAM/App.razor
+++ b/BLAZAM/App.razor
@@ -89,7 +89,7 @@
         }
         catch(Exception ex)
         {
-            Loggers.SystemLogger.Error("Error while fetching user theme: {Message}", ex);
+            Loggers.SystemLogger.Error("Error while fetching user theme: {@Error}", ex);
         }
     }
 
