--- a/BLAZAM/Pages/Error/UnhandledExceptionPage.razor
+++ b/BLAZAM/Pages/Error/UnhandledExceptionPage.razor
@@ -49,7 +49,7 @@
         }
         catch (Exception ex)
         {
-            Loggers.SystemLogger.Error("Error on unexpected error page: {Message}", ex);
+            Loggers.SystemLogger.Error("Error on unexpected error page: {@Error}", ex);
         }
     </MudContainer>
 
