--- a/BLAZAMGui/UI/Groups/RenameGroupModalContent.razor
+++ b/BLAZAMGui/UI/Groups/RenameGroupModalContent.razor
@@ -52,8 +52,7 @@
         }
         catch(Exception ex)
         {
-            Loggers.ActiveDirectryLogger.Error("Error attempting to rename a group");
-            Loggers.ActiveDirectryLogger.Error(ex.Message,ex);
+            Loggers.ActiveDirectryLogger.Error("Error attempting to rename a group {@Error}",ex);
             SnackBarService.Error("The group could not be renamed.");
         }
 
