--- a/BLAZAMGui/UI/Settings/Permissions/AddPrivilegeLevelModal.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/AddPrivilegeLevelModal.razor
@@ -63,8 +63,7 @@
         catch (Exception ex)
         {
 
-            Loggers.ActiveDirectryLogger.Error("Error attempting to add delegate " + selectedDelegate.CanonicalName);
-            Loggers.ActiveDirectryLogger.Error(ex.Message, ex);
+            Loggers.ActiveDirectryLogger.Error("Error attempting to add delegate " + selectedDelegate.CanonicalName + " {@Error}",ex);
             NotificationService.Error("An unexpected error has occured.");
         }
 
