Attempted fix for password setting on new users

--- a/BLAZAM/Pages/Users/CreateUser.razor
+++ b/BLAZAM/Pages/Users/CreateUser.razor
@@ -15,7 +15,7 @@
             @if (Templates != null && Templates.Count() > 0)
             {
                 <MudSelectList Values="TemplateCategories"
-                           @bind-Value=SelectedCategory />
+                               @bind-Value=SelectedCategory />
 
                 <MudPaper Width="300px">
                     <MudList SelectedItemChanged=@SetTemplate Clickable="true">
@@ -209,67 +209,67 @@
     {
         LoadingData = true;
         await InvokeAsync(StateHasChanged);
-            var ou = Directory.OUs.FindOuByString(SelectedTemplate.ParentOU).FirstOrDefault();
-            newUser = ou.CreateUser(SelectedTemplate.GenerateDisplayName(newUserName));
+        var ou = Directory.OUs.FindOuByString(SelectedTemplate.ParentOU).FirstOrDefault();
+        newUser = ou.CreateUser(SelectedTemplate.GenerateDisplayName(newUserName));
 
-            newUser.SamAccountName = SelectedTemplate.GenerateUsername(newUserName);
-            newUser.DisplayName = SelectedTemplate.GenerateDisplayName(newUserName);
-            newUser.NewPassword = SelectedTemplate.GeneratePassword().ToSecureString();
-            //newUser.CanonicalName = SelectedTemplate.GenerateDisplayName(newUserName);
-            newUser.StagePasswordChange(newUser.NewPassword, true);
-            if (!newUserName.GivenName.IsNullOrEmpty())
-                newUser.GivenName = newUserName.GivenName;
-            if (!newUserName.MiddleName.IsNullOrEmpty())
-                newUser.MiddleName = newUserName.MiddleName;
-            if (!newUserName.Surname.IsNullOrEmpty())
-                newUser.Surname = newUserName.Surname;
+        newUser.SamAccountName = SelectedTemplate.GenerateUsername(newUserName);
+        newUser.DisplayName = SelectedTemplate.GenerateDisplayName(newUserName);
+        //newUser.SetPassword(SelectedTemplate.GeneratePassword().ToSecureString(),false);
+        //newUser.CanonicalName = SelectedTemplate.GenerateDisplayName(newUserName);
+        newUser.StagePasswordChange(SelectedTemplate.GeneratePassword().ToSecureString(), true);
+        if (!newUserName.GivenName.IsNullOrEmpty())
+            newUser.GivenName = newUserName.GivenName;
+        if (!newUserName.MiddleName.IsNullOrEmpty())
+            newUser.MiddleName = newUserName.MiddleName;
+        if (!newUserName.Surname.IsNullOrEmpty())
+            newUser.Surname = newUserName.Surname;
 
-            foreach (var fieldValue in SelectedTemplate.InheritedFieldValues)
+        foreach (var fieldValue in SelectedTemplate.InheritedFieldValues)
+        {
+
+
+
+
+            try
             {
-
-
-
-
-                try
-                {
-                    if (fieldValue.Field != null)
-                        if (fieldValue.Field.FieldName.ToLower() == "homedirectory")
-                            newUser.HomeDirectory = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
-                        else
-                            newUser.NewEntryProperties[fieldValue.Field.FieldName] = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
-                    else if (fieldValue.CustomField != null)
-                        newUser.NewEntryProperties[fieldValue.CustomField.FieldName] = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
-                }
-                catch (Exception ex)
-                {
-                    Loggers.ActiveDirectryLogger.Error("Could not set value for " + fieldValue.Field?.FieldName + ": " + fieldValue.Value.ToString(), ex);
-                }
-
+                if (fieldValue.Field != null)
+                    if (fieldValue.Field.FieldName.ToLower() == "homedirectory")
+                        newUser.HomeDirectory = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
+                    else
+                        newUser.NewEntryProperties[fieldValue.Field.FieldName] = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
+                else if (fieldValue.CustomField != null)
+                    newUser.NewEntryProperties[fieldValue.CustomField.FieldName] = SelectedTemplate.ReplaceVariables(fieldValue.Value, newUserName);
             }
-            var conflictingEntry = Directory.Users.FindUserByUsername(newUser.SamAccountName);
-            if (conflictingEntry != null)
+            catch (Exception ex)
             {
-                newUser = null;
-                SnackBarService.Warning("An account with that name already exists! " + conflictingEntry.SamAccountName);
-                return ;
+                Loggers.ActiveDirectryLogger.Error("Could not set value for " + fieldValue.Field?.FieldName + ": " + fieldValue.Value.ToString(), ex);
             }
-            SelectedTemplate.AssignedGroupSids.ForEach(sid =>
-            {
-                var group = Directory.Groups.FindGroupBySID(sid.GroupSid);
-                if (group != null)
-                    newUser.AssignTo(group);
 
-            });
-            if (IsAdmin || SelectedTemplate.HasEmptyFields())
-            {
-                SelectedStep = 2;
-            }
-            else
-            {
-                //Go to confirm step
-                SelectedStep = 6;
+        }
+        var conflictingEntry = Directory.Users.FindUserByUsername(newUser.SamAccountName);
+        if (conflictingEntry != null)
+        {
+            newUser = null;
+            SnackBarService.Warning("An account with that name already exists! " + conflictingEntry.SamAccountName);
+            return;
+        }
+        SelectedTemplate.AssignedGroupSids.ForEach(sid =>
+        {
+            var group = Directory.Groups.FindGroupBySID(sid.GroupSid);
+            if (group != null)
+                newUser.AssignTo(group);
 
-            }
+        });
+        if (IsAdmin || SelectedTemplate.HasEmptyFields())
+        {
+            SelectedStep = 2;
+        }
+        else
+        {
+            //Go to confirm step
+            SelectedStep = 6;
+
+        }
 
         LoadingData = false;
 
