--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -40,6 +40,8 @@
 @using BLAZAM.Server.Data
 @using BLAZAM.Jobs;
 
+@using BLAZAM.Gui.UI.Outputs.Jobs;
+
 
 @using BLAZAM.Gui.UI.Dev
 @using BLAZAM.Gui.UI;
