--- a/BLAZAM/Pages/Home.razor
+++ b/BLAZAM/Pages/Home.razor
@@ -3,6 +3,7 @@
 @page "/Home"
 @using BLAZAM.Gui.UI.Dashboard
 @using BLAZAM.Gui.Helper
+@using BLAZAM.Gui.UI.Outputs.Jobs;
 @{
     string testValue="";
     Type valueType =testValue.GetType();
@@ -20,6 +21,11 @@
 }
 <CurrentUserDashboardWidgets/>
 
+@if (ApplicationInfo.InDebugMode)
+{
+    <MudButton Variant="Variant.Filled" OnClick="testJob">Run Test Job</MudButton>
+}
+
 @code {
     MarkupString? MOTD;
 
@@ -35,7 +41,36 @@
         }
         return base.OnInitializedAsync();
     }
-   
+    private IJob TestJob
+    {
+        get
+        {
+            IJob job = new Job("Test Job");
+            IJob job2 = new Job("Nested Job");
+            IJobStep step1 = new JobStep("Regular Step Passes", () => { Task.Delay(2000).Wait(); return true; });
+            IJobStep step2 = new JobStep("Regular Step Fails", () => { Task.Delay(2000).Wait(); return false; });
+            IJobStep step3 = new JobStep("Regular Step Throws", () => { Task.Delay(2000).Wait(); throw new ApplicationException("Test exception"); });
+            IJobStep step4 = new JobStep("Nested Step Passes", () => { Task.Delay(2000).Wait(); return true; });
+            IJobStep step5 = new JobStep("Nested Step Fails", () => { Task.Delay(2000).Wait(); return false; });
+            IJobStep step6 = new JobStep("Nested Step Throws", () => { Task.Delay(2000).Wait(); throw new ApplicationException("Test exception"); });
 
+            job.Steps.Add(step1);
+            job.Steps.Add(step2);
+            job.Steps.Add(step3);
+            job2.Steps.Add(step4);
+            job2.Steps.Add(step5);
+            job2.Steps.Add(step6);
+            job.Steps.Add((IJobStep)job2);
+            return job;
+        }
+    }
+    private async Task testJob()
+    {
+        var test = TestJob;
+        await MessageService.ShowMessage<JobResultDialog>(test.ToDialogParameters(), "Test Job");
+        var result = await test.RunAsync();
+
+
+    }
 
 }
