--- a/BLAZAMGui/UI/Dashboard/Widgets/FavoritesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/FavoritesWidget.razor
@@ -1,28 +1,38 @@
 ﻿@inherits Widget
 @attribute [Authorize]
-@* <NewEntriesWidgetDataGrid Items="@FavoriteEntries" T="IDirectoryEntryAdapter" Loading=LoadingData /> *@
-<FlexContainer Spacing="1" Class="mx-auto">
-    @foreach(var entry in FavoriteEntries)
-    {
 
-        <MudButton Variant="Variant.Outlined" Color="Color.Default" OnClick=@(()=>{GoTo(entry);}) Class="pa-3 ma-1 cursor-pointer" Elevation="0">
-            <MudStack Row=true>
-                <MudIcon Icon="@entry.TypeIcon()"/>
-                <MudStack>
-                    <MudTooltip Text="@entry.OU.ToPrettyOu()">
-                        <MudText>@entry.CanonicalName</MudText>
-                    </MudTooltip>
-                    <MudText>@entry.OU.ToPrettyOu()</MudText>
-                    <MudText>@AppLocalization["Last Change"]: @entry.LastChanged.Value.ToLocalTime().ToShortDateString()</MudText>
-                </MudStack>
-               
-            </MudStack>
-        </MudButton>
-           
-    }
-</FlexContainer>
+<MudDataGrid T="IDirectoryEntryAdapter"
+             Items="FavoriteEntries"
+             RowClick="@RowClicked"
+             RowClass="cursor-pointer"
+             Dense=true
+             Filterable=true
+             RowsPerPage="5"
+             FilterMode="DataGridFilterMode.Simple"
+             Loading=@LoadingData
+             Square=true
+             ColumnResizeMode="ResizeMode.Column"
+             Virtualize=true
+             Class="py-0"
+             SortMode="SortMode.Single">
+    <Columns>
+        <TemplateColumn Title="Type">
+            <CellTemplate>
+                <MudIcon Icon="@context.Item.TypeIcon()" />
+            </CellTemplate>
+        </TemplateColumn>
+        <PropertyColumn Property="x=>x.CanonicalName" Title="Name" />
+        <PropertyColumn Property="x=>x.LastChanged" Title="Changed" />
+
+    </Columns>
+    <PagerContent>
+        <MudDataGridPager T="IDirectoryEntryAdapter" />
+    </PagerContent>
+</MudDataGrid>
+
+
 <MudOverlay Visible=LoadingData>
-    <MudProgressLinear Indeterminate=true/>
+    <MudProgressLinear Indeterminate=true />
 </MudOverlay>
 @code {
     List<IDirectoryEntryAdapter> FavoriteEntries { get; set; } = new();
@@ -37,7 +47,7 @@
                 IDirectoryEntryAdapter match = Directory.GetDirectoryEntryByDN(entry.DN);
                 if (match == null)
                 {
-                   
+
                 }
                 else if (match.CanRead)
                 {
@@ -50,6 +60,20 @@
 
         });
 
+    }
+    void RowClicked(DataGridRowClickEventArgs<IDirectoryEntryAdapter> args)
+    {
+        if (args.Item != null)
+        {
+            GoTo(args.Item);
+        }
+    }
+    void FavoriteClicked(DataGridRowClickEventArgs<IDirectoryEntryAdapter> args)
+    {
+        if (args.Item != null)
+        {
+            GoTo(args.Item);
+        }
     }
     void GoTo(IDirectoryEntryAdapter args)
     {
