--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -62,7 +62,7 @@
 @using BLAZAM.Gui.UI.Chat
 @using BLAZAM.Gui.UI.Search
 @using BLAZAM.Gui.UI.Modals
-
+@using BLAZAM.Gui.Helper
 @using BLAZAM.Gui.UI.Groups
 @using BLAZAM.Gui.UI.Users.Fields
 @using BLAZAM.Gui.UI.Users
