--- a/BLAZAMGui/UI/Outputs/Jobs/JobDetails.razor
+++ b/BLAZAMGui/UI/Outputs/Jobs/JobDetails.razor
@@ -7,7 +7,7 @@
     <ToolBarContent>
         <MudText Typo="Typo.h6">
             @{
-                var title = Job.Name + " - ";
+                var title = "";
             }
             @switch (Job.Result)
             {
