Job UX improvements

--- a/BLAZAMGui/UI/Outputs/Jobs/JobElapsedTime.razor
+++ b/BLAZAMGui/UI/Outputs/Jobs/JobElapsedTime.razor
@@ -4,12 +4,24 @@
 @code {
     [CascadingParameter]
     public IJob Job { get; set; }
+    Timer timer;
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        timer = new Timer((state) => {InvokeAsync(StateHasChanged);}, null, 600, 600);
+    }
+
+    public override void Dispose()
+    {
+        base.Dispose();
+        timer.Dispose();
+    }
 
     private string ElapsedTime
     {
         get
         {
-            if (Job.Result == JobResult.Cancelled) return AppLocalization["Cancelled"];
+            //if (Job.Result == JobResult.Cancelled) return AppLocalization["Cancelled"];
             if (Job.ElapsedTime == null || !Job.ElapsedTime.HasValue) return AppLocalization["Not finished"];
             return (int)Job.ElapsedTime.Value.TotalMinutes + "m " + (int)(Job.ElapsedTime.Value.TotalMinutes % 1 * 60) + "s";
         }
