--- a/BLAZAMGui/UI/Computers/RegisterPrintersModalContent.razor
+++ b/BLAZAMGui/UI/Computers/RegisterPrintersModalContent.razor
@@ -59,7 +59,7 @@
 
         foreach (var printer in selectedPrinters.Where(p => p.ADPrinter == null))
         {
-            IJob registerJob = new Job(AppLocalization["Register Printers"],CurrentUser.State);
+            IJob registerJob = new Job(AppLocalization["Register Printers"],CurrentUser.State.AuditUsername);
             var newPrinter = destinationOU.CreatePrinter(printer);
             registerJob = newPrinter.CommitChanges(registerJob);
             if (registerJob.FailedSteps.Count == 0)
